Correction tablette

--- a/style.css
+++ b/style.css
@@ -526,10 +526,10 @@ footer ul li {
     width: 100%;
   }
   h2 {
-    font-size: 2vw;
+    font-size: 1.8vw;
   }
   .charticon {
-    font-size: 2vw;
+    font-size: 1.8vw;
   }
   .asidepopulaires {
     -webkit-box-orient: horizontal;
@@ -571,7 +571,7 @@ footer ul li {
     padding-bottom: 0.2vw;
   }
   figcaption {
-    font-size: 1.3vw;
+    font-size: 1.2vw;
   }
 }
 @media screen and (min-width: 500px) and (max-width: 700px) {
